k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: food-ordering
  labels:
    name: food-ordering
